fix spacing for h1, and container for portfolio

--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -13,7 +13,7 @@
 }
 
 .intro {
-  margin-right: 10rem;
+  margin-right: auto;
 }
 
 .intro h1 {
@@ -26,7 +26,7 @@
 }
 
 @media screen and (max-width: 960px) {
-  .intro {
+  /* .intro {
     margin-right: 0;
-  }
+  } */
 }
