--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -27,4 +27,19 @@
 
 .title {
   color: white;
+  margin-right: auto;
+  font-size: 1rem;
+}
+
+.portfolio-container {
+  display: flex;
+  align-items: center;
+
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
+
+.title h3 {
+  color: #00d4bd;
 }
